--- a/index.htm
+++ b/index.htm
@@ -4,9 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
-<body>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis, repellat.</p>
+<body class="bg-[#2D2D2D] font-["Poppins", sans-serif;]>
+    <div class=" border-b-2 border-[#808080] border-solid ">
+        <div class="container mx-auto flex justify-between items-center p-5 text-white font-[ font-family: "Poppins", sans-serif;]">
+            <div class="font-bold">logo</div>
+            <div>
+                <ul class="flex gap-6 ">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Features</a></li>
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">Resources</a></li>
+                </ul>
+            </div>
+            <div class="flex items-center">
+                <a href="#" class="text-[#AC6CFF] px-5 py-2">Sign in</a>
+                <a href="#" class=" bg-[#AC6CFF] text-white px-5 py-2 text-center rounded-lg">Sign up</a>
+            </div>
+        </div>
+    </div>
+
+    <section class="landpage container mx-auto flex justify-between mt-10 items-center">
+        <div class="relative">
+            <div class="bg-[#F2BFAF] absolute top-[30px] left-[-30px]  w-5 h-5 rounded-full"></div>
+            <p class="text-7xl font-bold text-white w-[500px]">
+                <span class="text-[#AC6CFF]">Boost</span> Your Brand with Innovative <span class="text-[#AC6CFF]">Digital Marketing</span> 
+            </p>
+            <p class="mt-10 text-white ">Drive Engagement and Conversions with Advanced Digital Marketing Strategies.</p>
+        </div>
+        <div class="bg-[#AC6CFF] rounded-[75px] h-[470px] w-[390px] absolute right-[130px] bottom-[195px]">
+            <img  src="assets/img/image1.png" alt="image1" class="w-[415px] absolute right-[40px] bottom-[10px]">
+        </div>
+    </section>
 </body>
 </html>
