section link & section service and footer sectio and why choose us section

--- a/index.htm
+++ b/index.htm
@@ -3,15 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="stylesheet" href="assets/Css/all.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Digtial Marketing</title>
 </head>
-<body class="bg-[#2D2D2D] font-["Poppins", sans-serif;]>
-    <div class=" border-b-2 border-[#808080] border-solid ">
-        <div class="container mx-auto flex justify-between items-center p-5 text-white font-[ font-family: "Poppins", sans-serif;]">
+<body class="bg-[#2D2D2D]  font-['Poppins',sans-serif] scroll-smooth">
+    <!-- nav section -->
+    <div class=" border-b-2 border-[#808080] border-solid hidden md:block ">
+        <div class="container mx-auto flex justify-between items-center p-4 text-white font-[ font-family: "Poppins", sans-serif;]">
             <div class="font-bold">logo</div>
             <div>
                 <ul class="flex gap-6 ">
@@ -28,18 +31,280 @@
             </div>
         </div>
     </div>
-
-    <section class="landpage container mx-auto flex justify-between mt-10 items-center">
-        <div class="relative">
-            <div class="bg-[#F2BFAF] absolute top-[30px] left-[-30px]  w-5 h-5 rounded-full"></div>
-            <p class="text-7xl font-bold text-white w-[500px]">
-                <span class="text-[#AC6CFF]">Boost</span> Your Brand with Innovative <span class="text-[#AC6CFF]">Digital Marketing</span> 
+<!-- landpage section -->
+    <section class="landpage container mx-auto flex justify-between   relative mt-10 items-center flex-wrap md:flex-nowrap gap-10 px-10">
+        <div class="relative max-w-[758px]">
+            <div class="bg-[#F2BFAF] absolute top-[25px] left-[-30px] w-5 h-5 rounded-full"></div>
+            <p class="text-5xl lg:text-[55px] font-bold text-white relative leading-tight">
+                <span class="text-[#AC6CFF]">Boost</span> Your Brand with Innovative 
+                <span class="text-[#AC6CFF]">Digital Marketing</span>
+                <span>
+                    <img src="assets/img/Vector-star.png" alt="star" class="w-[30px] lg:left-[305px] lg:bottom-[10px] absolute left-[270px] bottom-[6px]">
+                </span>
             </p>
-            <p class="mt-10 text-white ">Drive Engagement and Conversions with Advanced Digital Marketing Strategies.</p>
+            <p class="mt-10 text-white text-[1.7rem] max-w-[700px]">Drive Engagement and Conversions with 
+                Advanced Digital Marketing Strategies.</p>
+            <div class="footer-land-section flex gap-6 mt-8 flex-wrap justify-center sm:items-center lg:justify-normal ">
+                <a href="#" class="py-6 px-10 bg-[#AC6CFF] rounded-3xl text-white font-semibold transition-all duration-300 hover:bg-[#EADAFF] hover:text-[#AC6CFF]">Start Now</a>
+                <a href="#" class="py-6 px-10 bg-[#AC6CFF] rounded-3xl text-white font-semibold flex items-center gap-3 transition-all duration-300 hover:bg-[#EADAFF] hover:text-[#AC6CFF]">
+                    <i class="fa-solid fa-play"></i> Watch Demo
+                </a>
+            </div>
         </div>
-        <div class="bg-[#AC6CFF] rounded-[75px] h-[470px] w-[390px] absolute right-[130px] bottom-[195px]">
-            <img  src="assets/img/image1.png" alt="image1" class="w-[415px] absolute right-[40px] bottom-[10px]">
+    
+        <div class="relative">
+            <div class="bg-[#AC6CFF] rounded-[60px]  pr-[325px]  pb-[40px] pt-[375px] " ></div>
+            <img src="assets/img/image1.png" loading="lazy" alt="image1" class="w-[415px] absolute left-[-30px] bottom-[45px]">
+            <img src="assets/img/Vector-star.png" class="absolute left-[-38px] w-[30px] bottom-[90px]"  alt="star" loading="lazy">
+            <img src="assets/img/Vector-star.png" alt="star" loading="lazy" class="absolute w-[30px] right-[0px] top-[15px]">
         </div>
     </section>
+<!-- link setion -->
+<section class="bg-[#AC6CFF] mt-10 text-white">
+    <div class="container mx-auto">
+        <div>
+            <p class="text-center p-6">Trusted by thousand companies</p>
+        </div>
+        <div class="p-6  flex items-center gap-[10px] justify-evenly flex-wrap">
+            <a href="https://www.facebook.com" target="_blank">
+                <img src="assets/img/facbook.png" alt="facebook" loading="lazy" class="w-[50px] h-[50px] p-2 rounded-full bg-[#873EAF] transition-all duration-300 hover:scale-150">
+            </a>
+            <a href="https://www.google.com" target="_blank">
+                <img src="assets/img/google_symbol.svg.png" alt="google" loading="lazy" class="w-[50wh] h-[50px] p-2 rounded-full bg-[#873EAF] transition-all duration-300 hover:scale-150">
+            </a>
+            <a href="https://www.tiktok.com" target="_blank">
+                <img src="assets/img/tiktok.png" alt="tiktok" loading="lazy" class="w-[50px] h-[50wh] p-2 rounded-full bg-[#873EAF] transition-all duration-300 hover:scale-150">
+            </a>
+            <a href="https://www.instagram.com" target="_blank">
+                <img src="assets/img/insta.png" alt="insta" loading="lazy" class="w-[50px] h-[50wh] p-2 rounded-full bg-[#873EAF] transition-all duration-300 hover:scale-150">
+            </a>
+            <a href="https://www.pinterest.com" target="_blank">
+                <img src="assets/img/pintrest.png" alt="pinterest" loading="lazy" class="w-[50wh] h-[50px] p-2 rounded-full bg-[#873EAF] transition-all duration-300 hover:scale-150">
+            </a>
+            <a href="https://www.spotify.com" target="_blank">
+                <img src="assets/img/spotify.png" alt="spotify" loading="lazy" class="w-[50wh] h-[50px] p-2 rounded-full bg-[#873EAF] transition-all duration-300 hover:scale-150">
+            </a>
+            <a href="https://www.behance.net" target="_blank">
+                <img src="assets/img/behance.png" alt="behance" loading="lazy" class="w-[50wh] h-[50px] p-2 rounded-full bg-[#873EAF] transition-all duration-300 hover:scale-150">
+            </a>
+            <a href="https://store.steampowered.com" target="_blank">
+                <img src="assets/img/steam.png" alt="steam" loading="lazy" class="w-[50wh] h-[50px] p-2 rounded-full bg-[#873EAF] transition-all duration-300 hover:scale-150">
+            </a>
+            <a href="#" target="_blank">
+                <img src="assets/img/Vector2.png" alt="Vector2" loading="lazy" class="w-[50wh] h-[50px] p-2 rounded-full bg-[#873EAF] transition-all duration-300 hover:scale-150">
+            </a>
+        </div>     
+    </div>
+</section>
+
+<!-- service section -->
+<section class="bg-[#2F1C48] py-20">
+    <div class="container mx-auto px-3">
+        <div class="text-center">
+            <h3 class="text-white text-[30px] mb-3">Service</h3>
+            <p class="text-white text-[20px] mb-3 ">Strategic services drive digital success with tailored, comprehensive approaches.</p>
+        </div>
+        <div class="flex flex-wrap justify-between m-auto gap-5 grid grid-cols-1 md:grid-cols-3 lg:grid-cols-4  ">
+            <div class="my-5 w-[270wh] h-[250px] rounded-3xl bg-[#AC6CFF]  flex justify-center items-center">
+                <div class="service-card flex flex-col justify-center items-center">
+                    <div class="service-icon">
+                        <img src="assets/img/Laptop Metrics.png" alt="icon" loading="lazy" >
+                    </div>
+                    <div class="service-body mt-4">
+                        <h2 class="text-white font-bold text-2xl">SEO Marketing</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="my-5 w-[270wh] h-[250px] rounded-3xl bg-[#AC6CFF]  flex justify-center items-center">
+                <div class="service-card flex flex-col justify-center items-center">
+                    <div class="service-icon">
+                        <img src="assets/img/vector-studio.png" alt="icon" loading="lazy" >
+                    </div>
+                    <div class="service-body mt-4">
+                        <h2 class="text-white font-bold text-2xl">Research Topic Trends</h2>
+                    </div>
+                </div>
+            </div>            
+            <div class="my-5 w-[270wh] h-[250px] rounded-3xl bg-[#AC6CFF]  flex justify-center items-center">
+                <div class="service-card flex flex-col justify-center items-center">
+                    <div class="service-icon">
+                        <img src="assets/img/Email Open.png" alt="icon" loading="lazy" >
+                    </div>
+                    <div class="service-body mt-4">
+                        <h2 class="text-white font-bold text-2xl">Email Marketing</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="my-5 w-[270wh] h-[250px] rounded-3xl bg-[#AC6CFF]  flex justify-center items-center">
+                <div class="service-card flex flex-col justify-center items-center">
+                    <div class="service-icon">
+                        <img src="assets/img/Paid Search.png" alt="icon" loading="lazy" >
+                    </div>
+                    <div class="service-body mt-4">
+                        <h2 class="text-white font-bold text-2xl">Google PPC</h2>
+                    </div>
+                </div>
+            </div>            
+        </div>
+    </div>
+</section>
+<!-- why choose us section -->
+<section class="container mx-auto my-10 p-5 text-center md:text-justify">
+    <div class="flex items-center gap-4 text-3xl">
+        <p class="text-white">Why Choose Us?</p>
+        <div class="bg-white h-1 w-[90px] rounded-3xl"></div>
+    </div>
+    <div class="  grid grid-cols-1 lg:grid-flow-col gap-6 flex items-center justify-around">
+        <div>
+            <img src="assets/img/young people discussing the project.png" alt="photo" loading="lazy" class="my-5 w-[565px]">
+        </div>
+        <div>
+            <p class="text-4xl w-[350px] my-5 font-semibold text-white">Solutions Tailored Specifically to Your Business Needs</p>
+            <p class="text-white w-[350px] my-20">We provide customized solutions for your business needs, ensuring relevance and success.</p>
+            <a href="#" class="py-5 px-7 bg-[#AC6CFF] rounded-3xl text-white font-semibold transition-all duration-300 hover:bg-[#EADAFF] hover:text-[#AC6CFF]">Learn More</a>
+        </div>
+    </div>
+</section>
+
+<section class="container mx-auto my-10 p-5 text-center md:text-justify">
+    <div class="grid grid-cols-subgrid lg:grid-flow-col gap-4 items-center">
+        <div>
+            <p class="text-3xl font-bold text-white w-[360px]">Creative Excellence</p>
+            <p class="text-3xl text-white font-bold w-[360px]">Elevates Every Project</p>
+            <p class="text-white w-[360px] my-20">Creative excellence drives our work. From concept to execution, we aim for exceptional results.</p>
+            <a href="#" class="py-5 px-7 bg-[#AC6CFF] rounded-3xl text-white font-semibold transition-all duration-300 hover:bg-[#EADAFF] hover:text-[#AC6CFF]">Learn More</a>
+        </div>
+        <div>
+            <img src="assets/img/colleagues discussing team project.png" alt="photo" loading="lazy" class="my-5 w-[565px]">
+        </div>
+    </div>
+</section>
+
+<section class="container mx-auto my-10 p-5 text-center md:text-justify">
+    <div class="grid grid-cols-1 lg:grid-flow-col gap-4 flex items-center justify-around">
+        <div>
+            <img src="assets/img/young woman and young man shake hands and make a deal.png" alt="photo" loading="lazy" class="my-5 h-auto">
+        </div>
+        <div>
+            <p class="text-4xl w-[350px] my-5 font-bold text-white">Client Satisfaction is Our Main Focus</p>
+            <p class="text-white w-[350px] my-20">Our main goal is your satisfaction, and we work tirelessly to ensure that you are pleased with the results we achieve together.</p>
+            <a href="#" class="py-5 px-7 bg-[#AC6CFF] rounded-3xl text-white font-semibold transition-all duration-300 hover:bg-[#EADAFF] hover:text-[#AC6CFF]">Learn More</a>
+        </div>
+    </div>
+</section>
+
+<!-- price section -->
+<section class="bg-[#AC6CFF] py-7 p-5">
+<div class="container mx-auto">
+<div class="text-center">
+    <p class="text-white text-3xl font-semiboldbold">Pricing Plans</p>
+    <p class="text-white text-lg">The Best Solution for Our Clients</p>
+</div>
+<div class="grid grid-cols-subgrid lg:grid-flow-col mx-auto flex justify-around items-center text-center lg:text-justify">
+    <div class="bg-[#2F1C48] p-5 flex justify-center my-5 items-center h-[450px] w-[300px] rounded-[40px]">
+    <div class="card-price">
+        <div class="card-header text-center">
+            <p class="text-white text-xl font-semibold">Starter Plan</p>
+            <p class="my-3 text-[#AC6CFF] font-semibold text-[40px]">$500</p>
+        </div>
+        <div class="card-body">
+            <ol class="list-disc pl-5 decoration-dotted text-white">
+                <li class="">Responsive website design and development (5 pages)</li>
+                <li>Basic SEO
+                </li>
+                <li>Social media management </li>
+            </ol>
+            <div class="card-footer text-center mt-15 text-white ">
+                <a href="#" class="bg-[#AC6CFF] py-3 px-6 rounded-[20px] transition-all duration-300 hover:bg-[#EADAFF] hover:text-[#AC6CFF]" >Book Now</a>
+            </div>
+        </div>
+    </div>
+    </div>
+
+    <div class="bg-[#2F1C48] p-5 flex justify-center my-5 items-center h-[450px] w-[300px] rounded-[40px]">
+        <div class="card-price">
+            <div class="card-header text-center">
+                <p class="text-white text-xl font-semibold">Business  Plan</p>
+                <p class="my-3 text-[#AC6CFF] font-semibold text-[40px]">$1000</p>
+            </div>
+            <div class="card-body">
+                <ol class="list-disc pl-5 decoration-dotted text-white">
+                    <li class="">Responsive website design and development (10 pages)</li>
+                    <li>Advanced SEO
+                    </li>
+                    <li>Social media management </li>
+                    <li>PPC advertising campaign </li>
+                </ol>
+                <div class="card-footer text-center mt-15 text-white ">
+                    <a href="#" class="bg-[#AC6CFF] py-3 px-6 rounded-[20px] transition-all duration-300 hover:bg-[#EADAFF] hover:text-[#AC6CFF]" >Book Now</a>
+                </div>
+            </div>
+        </div>
+        </div>
+
+        <div class="bg-[#2F1C48] p-5 flex justify-center my-5 items-center h-[450px] w-[300px] rounded-[40px]">
+            <div class="card-price">
+                <div class="card-header text-center">
+                    <p class="text-white text-xl font-semibold">Premium Plan</p>
+                    <p class="my-3 text-[#AC6CFF] font-semibold text-[40px]">$2000</p>
+                </div>
+                <div class="card-body">
+                    <ol class="list-disc pl-5 decoration-dotted text-white">
+                        <li class="">Advanced Business plan</li>
+                        <li>Regular content creation
+                        </li>
+                        <li>Performance analysis and monthly reporting</li>
+                    </ol>
+                    <div class="card-footer text-center mt-15 text-white ">
+                        <a href="#" class="bg-[#AC6CFF] py-3 px-6 rounded-[20px] transition-all duration-300 hover:bg-[#EADAFF] hover:text-[#AC6CFF]" >Book Now</a>
+                    </div>
+                </div>
+            </div>
+            </div>
+        
+
+</div>
+</div>
+</section>
+
+<!-- footer section -->
+    <section class="bg-[#2C2E33] py-16 p-5">
+        <div class="container mx-auto flex justify-between flex-wrap">
+        <div class="w-[500px] my-5">
+            <h3 class="text-white text-xl mb-8">Company Name</h3>
+            <p class="text-white ">Our company is a leading digital marketing agency dedicated to driving success for
+                businesses online. With expertise in SEO, PPC, social media, content creation, 
+                and more, we offer tailored solutions to maximize ROI.</p>
+        </div>
+        <div>
+            <h3 class="text-[#AC6CFF] text-lg mb-8">Our Services</h3>
+            <p class="mb-3 text-white">SEO Marketing</p>
+            <p class="mb-3 text-white"> Research Topic Trends</p>
+            <p class="mb-3 text-white">Email Marketing</p>
+            <p class="mb-3 text-white">Google PPC</p>
+        </div>
+        <div>
+            <h3 class="text-[#AC6CFF] text-lg mb-8">Explore More</h3>
+            <p class="mb-3 text-white">About Us</p>
+            <p class="mb-3 text-white"> Feature</p>
+            <p class="mb-3 text-white">Our Works</p>
+            <p class="mb-3 text-white">Resource</p>
+            <p class="mb-3 text-white">Privacy Policy</p>
+        </div>
+        <div>
+            <h3 class="text-[#AC6CFF] text-lg mb-8">Contact Us</h3>
+            <p class="mb-3 text-white  flex gap-2"><span><img src="assets/img/locattion.png" alt="icon"></span> Qalyub , Vodafone ST. , Cairo EG</p>
+            <p class="mb-3 text-white  flex gap-2"><span><img src="assets/img/cal.png" alt="icon"></span>(02) 4210 87 67 </p>
+            <p class="mb-3 text-white  flex gap-2"><span><img src="assets/img/phone.png" alt="icon"></span>+20 109 20 889 22</p>
+        </div> 
+        </div>
+
+    </section>
+    <hr class="bg-[#2C2E33]  text-white">
+    <div class="flex justify-between text-white bg-[#2C2E33] py-16 p-5">
+        <p class="font-semibold text-xl">Company Name 2025 &copy; All right reserved </p>
+        <p class="font-semibold text-xl">Terms & Condition</p>
+    </div>
+
 </body>
 </html>
