hover in nav and service section

--- a/index.htm
+++ b/index.htm
@@ -7,6 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="stylesheet" href="assets/Css/style.css">
 <link rel="stylesheet" href="assets/Css/all.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Digtial Marketing</title>
@@ -18,11 +19,11 @@
             <div class="font-bold">logo</div>
             <div>
                 <ul class="flex gap-6 ">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Features</a></li>
-                    <li><a href="#">Pricing</a></li>
-                    <li><a href="#">Resources</a></li>
+                    <li><a href="#" class="nav">Home</a></li>
+                    <li><a href="#" class="nav">About Us</a></li>
+                    <li><a href="#" class="nav">Features</a></li>
+                    <li><a href="#" class="nav">Pricing</a></li>
+                    <li><a href="#" class="nav">Resources</a></li>
                 </ul>
             </div>
             <div class="flex items-center">
@@ -98,14 +99,14 @@
 </section>
 
 <!-- service section -->
-<section class="bg-[#2F1C48] py-20">
+<section class="bg-[#2F1C48] py-20 service">
     <div class="container mx-auto px-3">
         <div class="text-center">
             <h3 class="text-white text-[30px] mb-3">Service</h3>
             <p class="text-white text-[20px] mb-3 ">Strategic services drive digital success with tailored, comprehensive approaches.</p>
         </div>
         <div class="flex flex-wrap justify-between m-auto gap-5 grid grid-cols-1 md:grid-cols-3 lg:grid-cols-4  ">
-            <div class="my-5 w-[270wh] h-[250px] rounded-3xl bg-[#AC6CFF]  flex justify-center items-center">
+            <div class="card-service my-5 w-[270wh] h-[250px] rounded-3xl bg-[#AC6CFF] transition-all duration-150 ease-in-out hover:bg-[#2F1C48]  flex justify-center items-center">
                 <div class="service-card flex flex-col justify-center items-center">
                     <div class="service-icon">
                         <img src="assets/img/Laptop Metrics.png" alt="icon" loading="lazy" >
@@ -115,7 +116,7 @@
                     </div>
                 </div>
             </div>
-            <div class="my-5 w-[270wh] h-[250px] rounded-3xl bg-[#AC6CFF]  flex justify-center items-center">
+            <div class="my-5 w-[270wh] h-[250px] rounded-3xl bg-[#AC6CFF] transition-all duration-150 ease-in-out hover:bg-[#2F1C48]  flex justify-center items-center">
                 <div class="service-card flex flex-col justify-center items-center">
                     <div class="service-icon">
                         <img src="assets/img/vector-studio.png" alt="icon" loading="lazy" >
@@ -125,7 +126,7 @@
                     </div>
                 </div>
             </div>            
-            <div class="my-5 w-[270wh] h-[250px] rounded-3xl bg-[#AC6CFF]  flex justify-center items-center">
+            <div class="my-5 w-[270wh] h-[250px] rounded-3xl bg-[#AC6CFF] transition-all duration-150 ease-in-out hover:bg-[#2F1C48]  flex justify-center items-center">
                 <div class="service-card flex flex-col justify-center items-center">
                     <div class="service-icon">
                         <img src="assets/img/Email Open.png" alt="icon" loading="lazy" >
@@ -135,7 +136,7 @@
                     </div>
                 </div>
             </div>
-            <div class="my-5 w-[270wh] h-[250px] rounded-3xl bg-[#AC6CFF]  flex justify-center items-center">
+            <div class="my-5 w-[270wh] h-[250px] rounded-3xl bg-[#AC6CFF] transition-all duration-150 ease-in-out hover:bg-[#2F1C48]   flex justify-center items-center">
                 <div class="service-card flex flex-col justify-center items-center">
                     <div class="service-icon">
                         <img src="assets/img/Paid Search.png" alt="icon" loading="lazy" >
@@ -301,7 +302,7 @@
 
     </section>
     <hr class="bg-[#2C2E33]  text-white">
-    <div class="flex justify-between text-white bg-[#2C2E33] py-16 p-5">
+    <div class="flex justify-between flex-wrap text-white bg-[#2C2E33] py-16 p-5">
         <p class="font-semibold text-xl">Company Name 2025 &copy; All right reserved </p>
         <p class="font-semibold text-xl">Terms & Condition</p>
     </div>
