--- a/index.htm
+++ b/index.htm
@@ -105,7 +105,7 @@
             <h3 class="text-white text-[30px] mb-3">Service</h3>
             <p class="text-white text-[20px] mb-3 ">Strategic services drive digital success with tailored, comprehensive approaches.</p>
         </div>
-        <div class="flex flex-wrap justify-between m-auto gap-5 grid grid-cols-1 md:grid-cols-3 lg:grid-cols-4  ">
+        <div class="flex flex-wrap justify-between m-auto gap-5 grid grid-cols-1 lg:grid-cols-3 xl:grid-cols-4">
             <div class="card-service my-5 w-[270wh] h-[250px] rounded-3xl bg-[#AC6CFF] transition-all duration-150 ease-in-out hover:bg-[#2F1C48]  flex justify-center items-center">
                 <div class="service-card flex flex-col justify-center items-center">
                     <div class="service-icon">
@@ -116,7 +116,7 @@
                     </div>
                 </div>
             </div>
-            <div class="my-5 w-[270wh] h-[250px] rounded-3xl bg-[#AC6CFF] transition-all duration-150 ease-in-out hover:bg-[#2F1C48]  flex justify-center items-center">
+            <div class="my-5 w-[270wh] h-[250px] rounded-3xl bg-[#AC6CFF] transition-all  duration-150 ease-in-out hover:bg-[#2F1C48]  flex justify-center items-center">
                 <div class="service-card flex flex-col justify-center items-center">
                     <div class="service-icon">
                         <img src="assets/img/vector-studio.png" alt="icon" loading="lazy" >
