--- a/index.htm
+++ b/index.htm
@@ -11,6 +11,7 @@
 <link rel="stylesheet" href="assets/Css/all.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Digtial Marketing</title>
+    
 </head>
 <body class="bg-[#2D2D2D]  font-['Poppins',sans-serif] scroll-smooth">
     <!-- nav section -->
@@ -99,14 +100,14 @@
 </section>
 
 <!-- service section -->
-<section class="bg-[#2F1C48] py-20 service">
+<section class="bg-[#2F1C48] py-20 service transition-all duration-150 ease-in-out group hover:bg-[#AC6CFF]  ">
     <div class="container mx-auto px-3">
         <div class="text-center">
             <h3 class="text-white text-[30px] mb-3">Service</h3>
             <p class="text-white text-[20px] mb-3 ">Strategic services drive digital success with tailored, comprehensive approaches.</p>
         </div>
         <div class="flex flex-wrap justify-between m-auto gap-5 grid grid-cols-1 lg:grid-cols-3 xl:grid-cols-4">
-            <div class="card-service my-5 w-[270wh] h-[250px] rounded-3xl bg-[#AC6CFF] transition-all duration-150 ease-in-out hover:bg-[#2F1C48]  flex justify-center items-center">
+            <div class="card-service my-5 w-[270wh] h-[250px] rounded-3xl bg-[#AC6CFF] transition-all duration-150 ease-in-out group-hover:bg-[#2F1C48]  flex justify-center items-center">
                 <div class="service-card flex flex-col justify-center items-center">
                     <div class="service-icon">
                         <img src="assets/img/Laptop Metrics.png" alt="icon" loading="lazy" >
@@ -116,7 +117,7 @@
                     </div>
                 </div>
             </div>
-            <div class="my-5 w-[270wh] h-[250px] rounded-3xl bg-[#AC6CFF] transition-all  duration-150 ease-in-out hover:bg-[#2F1C48]  flex justify-center items-center">
+            <div class="my-5 w-[270wh] h-[250px] rounded-3xl bg-[#AC6CFF] transition-all  duration-150 ease-in-out group-hover:bg-[#2F1C48]  flex justify-center items-center">
                 <div class="service-card flex flex-col justify-center items-center">
                     <div class="service-icon">
                         <img src="assets/img/vector-studio.png" alt="icon" loading="lazy" >
@@ -126,7 +127,7 @@
                     </div>
                 </div>
             </div>            
-            <div class="my-5 w-[270wh] h-[250px] rounded-3xl bg-[#AC6CFF] transition-all duration-150 ease-in-out hover:bg-[#2F1C48]  flex justify-center items-center">
+            <div class="my-5 w-[270wh] h-[250px] rounded-3xl bg-[#AC6CFF] transition-all duration-150 ease-in-out group-hover:bg-[#2F1C48]  flex justify-center items-center">
                 <div class="service-card flex flex-col justify-center items-center">
                     <div class="service-icon">
                         <img src="assets/img/Email Open.png" alt="icon" loading="lazy" >
@@ -136,7 +137,7 @@
                     </div>
                 </div>
             </div>
-            <div class="my-5 w-[270wh] h-[250px] rounded-3xl bg-[#AC6CFF] transition-all duration-150 ease-in-out hover:bg-[#2F1C48]   flex justify-center items-center">
+            <div class="my-5 w-[270wh] h-[250px] rounded-3xl bg-[#AC6CFF] transition-all duration-150 ease-in-out group-hover:bg-[#2F1C48]   flex justify-center items-center">
                 <div class="service-card flex flex-col justify-center items-center">
                     <div class="service-icon">
                         <img src="assets/img/Paid Search.png" alt="icon" loading="lazy" >
